--- a/d3.html
+++ b/d3.html
@@ -3,16 +3,115 @@
   <head>
     <meta charset="utf-8">
     <title>d3 all test</title>
+    <style media="screen">
+      body {
+        padding: 10px 10px 10px 10px;
+      }
+
+      .axis path, .axis line {
+        fill: none;
+        stroke: black;
+        shape-rendering: crispEdges;
+      }
+
+      .axis text {
+        font-family: sans-serif;
+        font-size: 11px;
+      }
+    </style>
   </head>
   <body>
-    <svg width="500" height="500" version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-    ></svg>
-    <p>laobi</p>
-    <p>xiaoxin</p>
-    <p>pig</p>
     <script src="js/d3.v3.min.js" charset="utf-8"></script>
     <script type="text/javascript">
+      var width = "1000px";
+      var height = "1000px";
+      var svg = d3.select("body")
+                  .append("svg")
+                  .attr("width", width)
+                  .attr("height", height);
+
+      var center = [
+        [0.5, 0.5],
+        [0.7, 0.8],
+        [0.4, 0.9],
+        [0.11, 0.32],
+        [0.88, 0.25],
+        [0.75, 0.12],
+        [0.5, 0.1],
+        [0.2, 0.3],
+        [0.4, 0.1],
+        [0.6, 0.7]
+      ];
+
+      var linear = d3.scale.linear()
+                           .domain([0, 1.2 * d3.max(center, function(d){
+                             return d[0];
+                           })])
+                           .range([0, 300]);
+
+      // var pow = d3.scale.pow()
+      //                   .domain([1.2 * d3.max(center, function(d){
+      //                     return d[1];
+      //                   }), 0])
+      //                   .exponent(2)
+      //                   .range([0, 300])
+      //                   .nice();
+      var ylinear = d3.scale.linear()
+                            .domain([1.2 * d3.max(center, function(d){
+                              return d[1];
+                            }), 0])
+                            .range([0, 300])
+                            .nice();
+
+      var axis = d3.svg.axis()
+                       .scale(linear)
+                       .orient("bottom");
+
+      var laxis = d3.svg.axis()
+                        .scale(ylinear)
+                        .orient("left")
+                        .ticks(7)
+                        .tickSize(2, 4)
+                        .tickFormat(d3.format("$0.1f"));
+
+      var gAxis = svg.append("g")
+                     .attr("transform", "translate(80, 320)");
+      var xAxis = svg.append("g")
+                     .attr("transform", "translate(80, 20)");
+
+      gAxis.attr("class", "axis");
+      gAxis.call(axis);
+      xAxis.attr("class", "axis");
+      xAxis.call(laxis);
+
+      var pd = d3.select("body").style("padding");
+      var xoffset = 80;
+      var yoffset = 20;
+      var circles = svg.selectAll("circle")
+                       .data(center)
+                       .enter()
+                       .append("circle")
+                       .attr("cx", function(d){
+                         return xoffset + linear(d[0]);
+                       })
+                       .attr("cy", function(d){
+                         return yoffset + ylinear(d[1]);
+                       })
+                       .attr("r", "5px")
+                       .attr("fill", "black")
+      // var colors = d3.scale.category10()
+      // var rs = [15, 15, 15, 15, 15]
+      // svg.selectAll("circle")
+      //    .data(rs)
+      //    .enter()
+      //    .append("circle")
+      //    .attr("cx", function(d, i){ return d + i * 40; })
+      //    .attr("cy", "50px")
+      //    .attr("r", function(d){ return d; })
+      //    .attr("fill", function(d, i){ return colors(i); })
+
+    </script>
+    <!-- <script type="text/javascript">
       var svg = d3.select("svg")
       svg.append("circle")
          .attr("cx", "50px")
@@ -40,6 +139,6 @@
         .text(function(d){
           return d.name
         })
-    </script>
+    </script> -->
   </body>
 </html>
